err/django-articles-addons.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/articles'...
Listing './lib/python3.5/site-packages/articles/fixtures'...
Listing './lib/python3.5/site-packages/articles/locale'...
Listing './lib/python3.5/site-packages/articles/locale/en_US'...
Listing './lib/python3.5/site-packages/articles/locale/en_US/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/articles/management'...
Listing './lib/python3.5/site-packages/articles/management/commands'...
Compiling './lib/python3.5/site-packages/articles/management/commands/check_for_articles_from_email.py'...
***   File "./lib/python3.5/site-packages/articles/management/commands/check_for_articles_from_email.py", line 115
    except socket.error, err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/articles/management/commands/convert_comments_to_disqus.py'...
***   File "./lib/python3.5/site-packages/articles/management/commands/convert_comments_to_disqus.py", line 50
    except urllib2.HTTPError, err:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/articles/migrations'...
Listing './lib/python3.5/site-packages/articles/static'...
Listing './lib/python3.5/site-packages/articles/static/css'...
Listing './lib/python3.5/site-packages/articles/static/img'...
Listing './lib/python3.5/site-packages/articles/static/js'...
Listing './lib/python3.5/site-packages/articles/templates'...
Listing './lib/python3.5/site-packages/articles/templates/articles'...
Listing './lib/python3.5/site-packages/articles/templates/feeds'...
Listing './lib/python3.5/site-packages/articles/templatetags'...
Compiling './lib/python3.5/site-packages/articles/tests.py'...
***   File "./lib/python3.5/site-packages/articles/tests.py", line 173
    print a.rendered_content
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/articles_addons'...
Listing './lib/python3.5/site-packages/articles_addons/templatetags'...
Compiling './lib/python3.5/site-packages/articles_addons/urls.py'...
***   File "./lib/python3.5/site-packages/articles_addons/urls.py", line 13
    )
    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_articles-2.4.1.egg-info'...
Listing './lib/python3.5/site-packages/django_articles_addons-0.2.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
